--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "mongo":"*",
     "forms":"*",
     "mongoose":"*",
+    "request":"*",
     "bcrypt":"*",
+    "async":"*",
+    "jsdom":"*",
+    "jQuery":"*",
     "passport":"*",
     "passport-local":"*",
     "extend":"*",
